tests/valid/test10.wf
a = TRUE;
b = FALSE;
c = ((a AND TRUE) OR (b AND FALSE)) AND NOT (FALSE OR b);
print(c);
