tests/invalid/error7.wf
a = TRUE;
b = a AND c;
print(b);
